--- a/main.bib
+++ b/main.bib
@@ -1346,6 +1346,21 @@ MRREVIEWER = {Donald M. Davis},
 MRREVIEWER = {Andrzej Kozlowski},
 }
 
+@book {Matsumura,
+    AUTHOR = {Matsumura, Hideyuki},
+     TITLE = {Commutative ring theory},
+    SERIES = {Cambridge Studies in Advanced Mathematics},
+    VOLUME = {8},
+   EDITION = {Second},
+      NOTE = {Translated from the Japanese by M. Reid},
+ PUBLISHER = {Cambridge University Press, Cambridge},
+      YEAR = {1989},
+     PAGES = {xiv+320},
+      ISBN = {0-521-36764-6},
+   MRCLASS = {13-01},
+  MRNUMBER = {1011461 (90i:13001)},
+}
+
 @book {MayAlaskaNotes,
     AUTHOR = {May, J. P.},
      TITLE = {Equivariant homotopy and cohomology theory},
