--- a/finite.tex
+++ b/finite.tex
@@ -251,7 +251,7 @@ The context for $MOP$, by contrast, is reasonably simple.  \Cref{CalculationOfPi
 The algebraic moduli $\context{MU} = (\Spec MU_*, \Spec MU_* MU)$ and the topological moduli $(MU, MU \sm MU)$ are quite different.  An orientation $MU \to E$ selects a coordinate on the formal group $\CP^\infty_E$, but $\CP^\infty_E$ itself exists independently of the orientation.  Hence, while $\context{MU}(E_*)$ can have many connected components corresponding to \emph{distinct formal groups} on the coefficient ring $E_*$, the groupoid $\CatOf{RingSpectra}(\sheaf D_{MU}, E)$ has only one connected component corresponding to the formal group $\CP^\infty_E$ intrinsic to $E$.\footnote{The reader ought to compare this with the situation in explicit local class field theory, where a local number field has a preferred formal group attached to it.}\footnote{The precocious student might ask what functor $MU$ represents as an $E_\infty$ ring spectrum.  To date, this functor has not been algebraically recognized.}
 \end{remark}
 
-\begin{remark}\citeme{pg 5 of From Spectra To Stacks by Hopkins in the TMF volume}
+\begin{remark}\label{StackinessMeasuresNonorientability}\citeme{pg 5 of From Spectra To Stacks by Hopkins in the TMF volume}
 If $E$ is a complex-oriented ring spectrum, then the simplicial sheaf $\context{MU}(E)$ has an extra degeneracy, which causes the $MU$--based Adams spectral sequence for $E$ to degenerate.  In this sense, the ``stackiness'' of $\context{MU}(E)$ is exactly a measure of the failure of $E$ to be orientable.
 \end{remark}
 
@@ -446,7 +446,7 @@ A map $\G\co \Spec R \to \moduli{fg}$ lifts to $\moduli{fgl}$ exactly when the L
 Certainly if $\G$ admits a global coordinate, then $T_0 \G \cong R$.  Conversely, the formal group $\G$ is certainly locally isomorphic to $\A^1$ by a covering $i_\alpha\co X_\alpha \to \Spec R$ and isomorphisms $\phi_\alpha$---but, \textit{a priori}, these isomorphisms may not glue, precisely corresponding to the nontriviality of the {\Cech} $1$--cocycle \[[\phi_\alpha] \in \check{H}^1(\Spec R; \moduli{ps}^{\gpd}).\]  The group scheme $\moduli{ps}^{\gpd}$ is populated by $T$--points of the form \[\moduli{ps}^{\gpd}(T) = \left\{ t_0 x + t_1 x^2 + t_2 x^3 + \cdots \mid t_j \in T, t_0 \in T^\times \right\},\] and it is admits a filtration by the closed subschemes \[\moduli{ps}^{\gpd, \ge N}(T) = \left\{ 1 \cdot x + t_N x^{N+1} + t_{N+1} x^{N+2} + \cdots \mid t_j \in T \right\}.\]  The associated graded of this filtration is $\Gm \times \mathbb G_a^{\times \infty}$, and hence the filtration spectral sequence shows \[\check{H}^1(\Spec R; \moduli{ps}^{\gpd}) \xrightarrow{\simeq} \check{H}^1(\Spec R; \Gm),\] as $\check{H}^1(\Spec R; \mathbb G_a) = 0$ for all affine schemes.  Finally, given a choice\footnote{Incidentally, a choice of trivialization of $T_0 \G$ exactly resolves the indeterminacy of $\log'(0)$ in \Cref{RationalFGLsHaveLogarithms}.} of trivialization $T_0 \G \cong R$, this induces compatible trivializations of $T_0 i_\alpha^* \G$, which we can use to rescale the isomorphisms $\phi_\alpha$ so that their image in $\check{H}^1(\Spec R; \Gm)$ vanishes, and hence $[\phi_\alpha]$ is induced from a class in \[\check{H}^1(\Spec R; \moduli{ps}^{\gpd, \ge 1}).\]  This obstruction group vanishes.
 \end{proof}
 
-\begin{remark}
+\begin{remark}\label{StrictIsosRemark}
 The subgroup scheme $\moduli{ps}^{\gpd, \ge 1}$ is often referred to in the literature as the group of \textit{strict isomorphisms}.  There is an associated moduli of formal groups identified only up to strict isomorphism, which sits in a fiber sequence \[\Gm \to \moduli{fgl} \mmod \moduli{ps}^{\gpd, \ge 1} \to \moduli{fg}.\]  These appeared earlier in this Lecture as well: in the proof of \Cref{LazardsTheorem}, we constructed over $L$ the universal formal group law equipped with a \emph{strict} exponential map.  The moduli of formal group laws modulo strict isomorphisms appears as the context associated to the graded version, rather than even-periodic version, of the story told so far---i.e., as a sort of non-periodic context $\context{MU}$.
 \end{remark}
 
@@ -937,7 +937,7 @@ The second condition is satisfied one of two ways, corresponding to our two auxi
 This construction always gives an $MUP$--module spectrum in the homotopy category.  If $\sheaf F$ comes from the pushforward of the ring of functions along a flat map $\Spec R \to \moduli{fg}$, then the resulting spectrum is a ring spectrum, and flat sheaves on it become module spectra over this ring spectrum.
 \end{remark}
 
-\begin{remark}[{\cite[Equation 20.1]{HopkinsCOCTALOS}}]
+\begin{remark}[{\cite[Equation 20.1]{HopkinsCOCTALOS}}]\label{PullingBackOverMfgVsMfgl}
 If $f\co \Spec R \to \moduli{fg}$, then in the pullback
 \begin{center}
 \begin{tikzcd}
@@ -945,7 +945,7 @@ P \arrow{d} \arrow["f'"]{r} & \moduli{fgl} \arrow{d} \\
 \Spec R \arrow["f"]{r} & \moduli{fg}
 \end{tikzcd}
 \end{center}
-the sheaf ${f'}^* \context{MU}(X)$ gives a model for $(MU \sm R)_0(X)$ \emph{without first defining $R_0$}.  We can use this to define $R_0(X)$ by suitably equalizing the maps $s, t\co (\moduli{fgl} \times \moduli{ps}^{\gpd}) \to \moduli{fgl}$, but forming this equalizer may not be exact.  By selecting a lift $\widetilde f\co \Spec R \to \moduli{fgl}$, this equalizer becomes \emph{forked} (i.e., we gain an extra degeneracy in the simplicial object), and the equalizer is thus guaranteed to be exact.
+the sheaf ${f'}^* \context{MU}(X)$ gives a model for $(MU \sm R)_0(X)$ \emph{without first defining $R_0$}.  We can use this to define $R_0(X)$ by suitably equalizing the maps $s, t\co (\moduli{fgl} \times \moduli{ps}^{\gpd}) \to \moduli{fgl}$, but forming this equalizer may not be exact.  By selecting a lift $\widetilde f\co \Spec R \to \moduli{fgl}$, this equalizer becomes \emph{forked} (i.e., we gain an extra degeneracy in the simplicial object), and the equalizer is thus guaranteed to be exact.  
 \end{remark}
 
 We then turn to the first collection of conditions.  They are \emph{always} satisfied, but this requires an argument.  We write $i_d\co \moduli{fg}^{= d} \to \moduli{fg}$ for the inclusion of the substack of formal groups of height exactly $d$, which (following \Cref{OpenSubstacksOfMfg}) has a presentation by the Hopf algebroid \[(v_d^{-1} A / I_d, \Gamma \otimes v_d^{-1} A / I_d).\]  We are trying to study the derived functors of \[\sheaf N \mapsto (i_d{}_* i_d^* \sheaf F) \otimes \sheaf N \cong i_d{}_* (i_d^* \sheaf F \otimes i_d^* \sheaf N).\]  Since $i_d{}_*$ is exact, we are moved to study the composite functor spectral sequence for \[\CatOf{QCoh}_{\moduli{fg}} \xrightarrow{i_d^*} \CatOf{QCoh}_{\moduli{fg}^{=d}} \xrightarrow{i_d^* \sheaf F \otimes -} \CatOf{QCoh}_{\moduli{fg}^{=d}}.\]  The second functor is actually exact: the geometric map \[\Gamma_d\co \Spec k \to \moduli{fg}^{=d}\] is a faithfully flat cover, and $k$--modules have no nontrivial $\Tor$.  Meanwhile, the first functor has at most $d$ derived functors: $i_d^*$ is modeled by tensoring with $v_d^{-1} A / I_d$, but $A / I_d$ admits a Koszul resolution with $d$ stages and $A / I_d \to v_d^{-1} A / I_d$ is exact.  As $\Tor_{d+1}$ is beyond the length of this resolution, it is always zero.
@@ -985,6 +985,17 @@ E(1)P & \cong KU_{(p)}.
 
 \begin{remark}[{\cite[Section 5.2]{KLW}, \cite[Corollaries 2.14 and 2.16]{RavenelLocalizationWRTPeriodic}, \cite[Theorem 2.13]{StricklandProductsOnModules}}]\label{MoravaKIsNotCommutative}
 In general, the quotient of a ring spectrum by a homotopy element does not give another ring spectrum.  The most typical example of this phenomenon is that $\S/2$ is not a ring spectrum, since its homotopy is not $2$--torsion.  Most of our constructions above do not suffer from this deficiency, with one exception: Morava $K$--theories at $p = 2$ are not commutative.  Instead, there is a derivation $Q_d: K(d) \to \Susp K(d)$ which tracks the commutativity by the relation \[ab - ba = u Q_d(a) Q_d(b).\]  In particular, we find that $K(d)^* X$ is a commutative ring whenever $K(d)^1 X = 0$, which is often the case.
+\end{remark}
+
+\begin{remark}\citeme{Section 3 of From Spectra to Stacks}
+Before turning to the other half of this Lecture, we feel obligated to include one out-of-place remark that the first-time reader is advised to skip.  The pullback idea expressed in \Cref{PullingBackOverMfgVsMfgl} intermingles interestingly with the detection result expressed in \Cref{StackinessMeasuresNonorientability}: there is a certain program, which is beyond the scope of this point of the book, which realizes spectra associated to certain nontrivial \emph{stacks} equipped with maps to the moduli of formal groups.  For instance, the non-complex-orientable spectrum $KO$ is attached to a map \[\Spec \Z \mmod C_2 \to \moduli{fg}\] which selects $KU$ with its complex-conjugation action.  There is a sequence of non-complex-orientable ring spectra $X(n) = T(\Loops SU(n))$ which limit to $X(\infty) = MU$ and which carry ``partial complex-orientations'' that give a Thom isomorphism for $\CP^{n-1}$, i.e., they come equipped with a specified formal group law modulo terms of degree $n$.  We write $\moduli{fg}^{(n)}$ for the moduli of formal groups where the isomorphisms are required to act trivially on space of $n$--jets (so that, e.g., \Cref{StrictIsosRemark} concerns $\moduli{fg}^{(1)}$).  The pullback of stacks
+\begin{center}
+\begin{tikzcd}
+P \arrow{r} \arrow{d} & \moduli{fg}^{(2)} \arrow{d} \\
+\Spec \Z \mmod C_2 \arrow{r} & \moduli{fg}
+\end{tikzcd}
+\end{center}
+is actually affine, and this is a witness to the fact that $X(2) \sm KO$ is a complex-orientable ring spectrum, even if neither of $KO$ or $X(2)$ is.
 \end{remark}
 
 Having constructed these chromatic homology theories, for the rest of this Lecture we pursue an example of a ``fiberwise'' analysis of a phenomenon in homotopy theory.  First, recall the following classical theorem:
@@ -1135,7 +1146,7 @@ Let $\CatOf C$ be a triangulated $\otimes$--category $\CatOf C$.  A thick subcat
 \item \ldots a \textit{$\otimes$--ideal} when $x \in \CatOf C'$ forces $x \otimes y \in \CatOf C'$ for any $y \in \CatOf C$.
 \item \ldots a \textit{prime $\otimes$--ideal} when $x \otimes y \in \CatOf C'$ also forces at least one of $x \in \CatOf C'$ or $y \in \CatOf C'$.
 \end{itemize}
-Finally, define the \textit{spectrum} of $\CatOf C$ to be its collection of prime $\otimes$--ideals.  For any $x \in \CatOf C$ we define a basic open $U(x) = \{\CatOf C' \mid x \in \CatOf C'\}$, which altogether give a basis for a topology on the spectrum.\todo{Double check that you have the directionality of this right.  Is $U$ a basic open or a basic closed?  It it full of things that contain $x$ or that don't contain in $x$?}
+Finally, define the \textit{spectrum} of $\CatOf C$ to be its collection of prime $\otimes$--ideals.  For any $x \in \CatOf C$ we define a basic open $U(x) = \{\CatOf C' \mid x \in \CatOf C'\}$, which altogether give a basis for a topology on the spectrum.
 \end{definition}
 
 The basic result about this definition is that it does not miss any further conditions:
@@ -1247,7 +1258,7 @@ For the left-hand square, the inclusion of the open substack of dimension $d-1$ 
 These functors and their properties listed thus far give a tight analogy between certain local categories of spectra and sheaves supported on particular submoduli of formal groups, in a way that lifts the six-functors formalism of $j_* \vdash j^*$ to the level of spectra.  With this analogy in hand, however, one is led to ask considerably more complicated questions whose proofs are not at all straightforward.  For instance, a useful fact about coherent sheaves on $\moduli{fg}$ is that they are completely determined by their restrictions to all of the open submoduli.  The analogous fact about finite spectra is referred to as \textit{chromatic convergence}:
 
 \begin{theorem}[{\cite[Theorem 7.5.7]{RavenelOrangeBook}}]\label{ChromaticConvergence}
-The homotopy limit of the tower \[\cdots \to L_d F \to L_{d-1} F \to \cdots \to L_1 F \to L_0 F\] recovers the $p$--local homotopy type of any finite spectrum $F$.\footnote{Spectra satisfying this limit property are said to be \textit{chromatically complete}, which is closely related to being \textit{harmonic}, i.e., being local with respect to $\bigvee_{d=0}^\infty K(d)$.  (I believe this a joke about ``music of the spheres''.)  It is known that nice Thom spectra are harmonic~\cite{Kriz} (so, in particular, every suspension and finite spectrum), that every finite spectrum is chromatically complete, and that there exist some harmonic spectra which are not chromatically complete~\cite[Section 5.1]{Barthel}.} \qed
+The homotopy limit of the tower \[\cdots \to L_d F \to L_{d-1} F \to \cdots \to L_1 F \to L_0 F\] recovers the $p$--local homotopy type of any finite spectrum $F$.\footnote{Spectra satisfying this limit property are said to be \textit{chromatically complete}, which is closely related to being \textit{harmonic}, i.e., being local with respect to $\bigvee_{d=0}^\infty K(d)$.  (I believe this a joke about ``music of the spheres''.)  It is known that nice Thom spectra are harmonic~\cite{Kriz} (so, in particular, every suspension and finite spectrum), that every finite spectrum is chromatically complete, and that there exist some harmonic spectra which are not chromatically complete~\cite[Section 5.1]{Barthel}.}\footnote{A consequence of the fact that $p$--local finite spectra are $\bigvee_{d < \infty} K(d)$--local, there are no nontrivial maps $\HFp \to F$, and in particular the Spanier--Whitehead dual of $\HFp$ is null.}\footnote{While we're talking about $\bigvee_{d < \infty} K(d)$, the cofiber of $\bigvee_{d < \infty} K(d) \to \prod_{d < \infty} K(d)$, where we are using the $2(p^d-1)$--periodic spectra, is concentrated in degree zero since all other homotopy degrees carry contributions from only finitely many factors.  It follows that the cofiber is Eilenberg--Mac Lane---an unusual property.} \qed
 \end{theorem}
 
 In addition to furthering the analogy, \Cref{ChromaticConvergence} suggests a method for analyzing the homotopy groups of spheres: we could study the homotopy groups of each $L_d \S$ and perform the reassembly process encoded by this inverse limit.  Additionally, \Cref{ChromaticFractureSquares} shows that this process is inductive: $L_d \S$ can be understood in terms of the spectrum $L_{d-1} \S$, the spectrum $\widehat L_d \S$, and some gluing data in the form of $L_{d-1} \widehat L_d \S$.  Hence, we become interested in the homotopy of $\widehat L_d \S$, which is the target of the $E_d$--Adams spectral sequence considered in \Cref{StableContextLecture}.
@@ -1265,11 +1276,21 @@ The utility of this Theorem is in the identification of the stack $\context{E_d}
 For $\Gamma_d$ the Honda formal group law of height $d$ over a perfect field $k$ of positive characteristic $p$, we compute \[\Aut \Gamma_d \cong \left( \W_p(k) \<S\> \middle/ \left( \begin{array}{c} Sw = w^\phi S, \\ S^d = p \end{array} \right) \right)^\times,\] where $\phi$ denotes a lift of the Frobenius from $k$ to $\W_p(k)$. \qed
 \end{theorem}
 
-\begin{remark}\label{StablizerRepIsComplicated}
-As a matter of emphasis, this Theorem does not give any description of the \emph{representation} of $\Aut \Gamma_d$, which is very complicated (cf.\ \Cref{ThePeriodMapSection}).  Nonetheless, the arithmetically-minded reader might recognize this description of $\Aut \Gamma_d$ as the group of units of a maximal order $\mathbf o_D$ in the division algebra $D$ of Brauer--Hasse invariant $1/d$ over $k$---another glimpse of arithmetic geometry poking through to affect stable homotopy theory.\footnote{This finally explains our preference for using the letter ``$d$'' to represent the height of a formal group---the ``$d$'' (or, rather the ``$D$'') stands for ``division algebra''.  The typical algebraic topologist writes ``$n$'' for the height, a trend set by Jack Morava, allegedly because the localizer ``$L_n$'' is a homophone of his wife's name, Ellen.  It has been further alleged that the ``$E$'' in ``Morava $E$--theory'' is also an abbreviation for Ellen.  With no disrespect meant to either of them, I find ``$d$'' to be a considerably better mnemonic and to be less likely to conflict with other indices.  ``$E$'' is also prone to collisions (with spectral sequences, with operads, \ldots), but there is no compelling alternative.}
+\begin{remark}[{\cite[Section 24]{StricklandFPFP}, \cite{DevinatzHopkins}}]\label{StablizerRepIsComplicated}
+As a matter of emphasis, this Theorem does not give any description of the \emph{representation} of $\Aut \Gamma_d$, which is very complicated (cf.\ \Cref{ThePeriodMapSection}).  Here are some basic facts about it:
+\begin{itemize}
+    \item The center of $\Aut \Gamma_d$ is given by $\Z_p^\times$, the subgroup spanned by the multiplication--by--$n$ maps for various $n$.  This subgroup acts trivially on the deformation space.
+    \item More generally, one can show that the action of $\W_p(k)$ extends this action.  It is the stabilizer of the \textit{canonical lift}, which is the $\W_p(k)$--point of Lubin--Tate space given by sending the generators $v_j$ to zero, $j \ge 1$.
+    \item The formula for the action of $a = \sum_{j=0}^{n-1} a_j S^j$ on the tangent space is specified by the linear system \[a^* \left( \begin{array}{c} u_0 \\ u_1 \\ \vdots \\ u_{n-1} \end{array}\right) \equiv a_0 \left( \begin{array}{cccc} a_0 & 0 & \cdots & 0 \\ a_1 & a_0^p & \cdots & 0 \\ \vdots & \vdots & \ddots & \vdots \\ a_{n-1} & a_{n-2}^p & \cdots & a_0^{p^n} \end{array} \right)^{-1} \cdot \left( \begin{array}{c} u_0 \\ u_1 \\ \vdots \\ u_{n-1} \end{array} \right) \pmod{\mathfrak{m}^2}.\]
+    \item Plenty more information can be found in the work of Devinatz and Hopkins~\cite{DevinatzHopkins}, which is best digested after \Cref{SectionDieudonneModules}.
+\end{itemize}
 \end{remark}
 
-\begin{example}[Adams]\label{piLK1SExample}\citeme{Find a citation}
+\begin{remark}
+The arithmetically-minded reader might recognize this description of $\Aut \Gamma_d$ as the group of units of a maximal order $\mathbf o_D$ in the division algebra $D$ of Brauer--Hasse invariant $1/d$ over $k$---another glimpse of arithmetic geometry poking through to affect stable homotopy theory.\footnote{This finally explains our preference for using the letter ``$d$'' to represent the height of a formal group---the ``$d$'' (or, rather the ``$D$'') stands for ``division algebra''.  The typical algebraic topologist writes ``$n$'' for the height, a trend set by Jack Morava, allegedly because the localizer ``$L_n$'' is a homophone of his wife's name, Ellen.  It has been further alleged that the ``$E$'' in ``Morava $E$--theory'' is also an abbreviation for Ellen.  With no disrespect meant to either of them, I find ``$d$'' to be a considerably better mnemonic and to be less likely to conflict with other indices.  ``$E$'' is also prone to collisions (with spectral sequences, with operads, \ldots), but there is no compelling alternative.}
+\end{remark}
+
+\begin{example}[{Adams, \cite[Lemma 2.5]{HMS}}]\label{piLK1SExample}
 In the case $d = 1$, the objects involved are small enough that we can compute them by hand.  To begin, we have an isomorphism $\operatorname{Aut}(\Gamma_1) = \Z_p^\times$, and the action of this group on $\pi_* E_1 = \Z_p[u^\pm]$ is by $\gamma \cdot u^n \mapsto \gamma^n u^n$.  At odd primes $p$, one computes\footnote{At odd primes, $p$ is coprime to the order of the torsion part of $\Z_p^\times$.  At $p = 2$, this is not true, so the representation has infinite cohomological dimension and there is plenty of room for differentials in the ensuing $E_{\G_m}$--Adams spectral sequence..} \[H^s(\operatorname{Aut}(\Gamma_1); \pi_* E_1) = \begin{cases}\Z_p & \text{when $s = 0$}, \\ \bigoplus_{j = 2(p-1)k} \Z_p\{u^j\} / (pk u^j) & \text{when $s = 1$}, \\ 0 & \text{otherwise}. \end{cases}\]  This, in turn, gives the calculation\footnote{The groups $\pi_* \widehat L_1 \S$ are familiar to homotopy theorists: the Adams conjecture~\cite{AdamsJXIV} (and its solution) implies that the $J$--homomorphism $J_{\C}\co BU \to BGL_1 \S$ described in \Cref{DefnRealJHomomorphism} and \Cref{ComplexJHomomorphism} selects exactly these elements for nonnegative $t$.}
 \[
 \pi_t \widehat L_1 \S^0 = \begin{cases} \Z_p & \text{when $t = 0$}, \\ \Z_p / (pk) & \text{when $t = k|v_1| - 1$}, \\ 0 & \text{otherwise}. \end{cases}
@@ -1329,11 +1350,7 @@ The other invariant functions described in \Cref{IdIsAnInvariantIdeal} (e.g., $v
 In the broader literature, the phrase ``Greek letter elements'' typically refers to the pushforward of the above elements to the homotopy groups of $\S$ by pinching to the top cell.  This is somewhat obscuring: for instance, this significantly entangles how multiplication by $\alpha_{j/k}$ behaves.  Finally, the incarnation of these element in $\G_m$--local homotopy are exactly the elements witnessed by the invariant function $u^{2(p-1)k}$ in \Cref{piLK1SExample}.
 \end{remark}
 
-\todo{Section 24 of FPFP has some facts about the behavior of the Morava stabilizer on Lubin--Tate space.  It could be nice to include this, perhaps even with proofs.}
-\todo{Another fun fact is that because $p$--local finite spectra $F$ are $\bigvee_{d < \infty} K(d)$--local, there are no nontrivial maps $\HFp \to F$ (and, in particular, the Spanier--Whitehead dual of $\HFp$ is null).  (In fact, the Hovey paper \textit{Bousfield Localization Functors and Hopkins' Chromatic Splitting Conjecture} shows that they are local for any properly infinite collection of Morava $K$--theories.)}
-\todo{Danny was asking some interesting questions about the relationships between the $t_i$ and the $h_j$ elements of the Adams spectral sequence.  You could try to explain some of this comparison and how you get the Hopf invariant one theorem out of it.}
-\todo{Danny was also asking about the role of the $T(j)$ spectra, which are pretty cool.  They (and their utility as described in \textit{From Spectra to Stacks}) might live in a Remark somewhere.}
-\todo{Tobi had a cute argument: the cofiber of $\bigvee_n K(n) \to \prod_n K(n)$ is concentrated in degree $0$ (hence Eilenberg--Mac Lane) because each nonzero homotopy degree receives contributions from only finitely many $K(n)$ spectra.  I'm not sure what this is good for, but it's a neat fact.  (It's important to work with the minimally periodic spectra here.)}
+\todo{Danny was asking some interesting questions about the relationships between the $t_i$ and the $h_j$ elements of the Adams spectral sequence.  You could try to explain some of this comparison and how you get the Hopf invariant one theorem out of it.  This could also include a brief discussion of the (geometric and algebraic) chromatic spectral sequence(s).}
 
 
 
